--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
         <section>
             <h2><i class="fas fa-envelope icon"></i>6. Kontak Kami</h2>
-            <p>Untuk pertanyaan atau permintaan terkait kebijakan ini, silakan hubungi kami di <a href="mailto:airohunter@example.com">airohunter@example.com</a>.</p>
+            <p>Untuk pertanyaan atau permintaan terkait kebijakan ini, silakan hubungi kami di <a href="mailto:airohunter.io@gmail.com">airohunter.io</a>.</p>
         </section>
 
         <section>
